projects/vb6parse/snapshots/syntax/statements/file_operations/kill/kill_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/kill.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: KillStatement
      children:
        - kind: KillKeyword
          text: Kill
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"temp.dat\""
    - kind: Newline
      text: "\n"
